--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
+:ho
 body {
   margin: 0;
   font-family: Arial, sans-serif;
   line-height: 1.6;
-  color: #333;
+  color: #bfe0af;
 }
 
 header {
-  background-color: #333;
-  color: #fff;
+  background-color: #bfe0af;
+  color: #4e8629;
   padding: 10px 20px;
   display: flex;
   justify-content: space-between;
